- 23/02/2025
07. installer.c: Fix SEGSEGV
- 02/05/2025
08. debian/rules: Fix dh_strip failure for setuid binaries
- 03/05/2025
09. drate.c: added -a option to alias domains to existing domain definition,
    -U option to delete rate control definitions.
10. slowq-send.c, qmail-send.c: reorganized code
11. Updated indimail-mta permissions files for SLES

* Tue Dec 24 2024 20:28:14 +0000 Manvendra Bhangui <indimail-mta@indimail.org 3.0.9-1.1%{?dist}
Release 3.0.9-1.1 Start 08/08/2024 End 24/12/2024
- 08/08/2024
1. svctool: fixed mariadb db creation for mariadb 11.x on archlinux
- 01/09/2024
2. queue-fix.c: bug - tcpto buffer size was unitialized
- 02/09/2024
3. svctool: fixed uid/gid for qmail-poppass to run under qmaild:indimail
4. svctool: fix STARTTLS issue for imap port 143, pop3 port 110 permission
   reading servercert.pem. Run with qcerts gid
5. qmail-poppass.c: ensure qmail-poppass runs with qmaild:indimail privileges
- 05/09/2024
6. qscheduler: prevent restart of qmail-send on receipt of SIGTERM
7. svctool: umount resolv.conf only when UNSHARE variable is set and
   /etc/indimail/resolv.conf exists
- 27/11/2024
8. smtpd.c: fixed spf error message display in err_spf()
- 21/12/2024
9. smtpd.c: display command name in err_unimpl()

* Tue Aug 06 2024 12:51:02 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.8-1.1%{?dist}
Release 3.0.8-1.1 Start 05/02/2024 End XX/XX/XXXX
======= Release Highlights ================================================
- Fixed discarded-qualifier compiler warings
- Fixed warnings for gcc14
- Added XOAUTH2 authentication
===========================================================================
- 05/03/2024
01. svctool: mount /etc/indimail/resolv.conf when UNSHARE is set
- 11/03/2024
02. installer.c: fixed displaying size variable, fixed allocation of zerobuf
    variable
- 29/04/2024
03. trynpbg1.c, tryspnam.c: Fix compiler warnings
- 30/04/2024
04. sys-checkpwd.c: display in logs if userpw, shadow is enabled for encrypted