@@ -22,6 +22,9 @@ Release 3.1-1.1 Start 26/12/2024 End XX/XX/XXXX
     -U option to delete rate control definitions.
 10. slowq-send.c, qmail-send.c: reorganized code
 11. Updated indimail-mta permissions files for SLES
+- 06/05/2025
+12. date.c: remove domain name check for special domain .global
+13. slowq-send.c, qmail-send.c: reset tv.tv_sec on EINVAL
 
 * Tue Dec 24 2024 20:28:14 +0000 Manvendra Bhangui <indimail-mta@indimail.org 3.0.9-1.1%{?dist}
 Release 3.0.9-1.1 Start 08/08/2024 End 24/12/2024
